--- a/services/courier-service/Dockerfile
+++ b/services/courier-service/Dockerfile
@@ -5,11 +5,19 @@ COPY pom.xml .
 COPY src ./src
 RUN mvn -B -DskipTests package
 
+FROM node:20-alpine AS build-frontend
+WORKDIR /frontend
+COPY frontend/package*.json ./
+RUN npm install
+COPY frontend .
+RUN npm run build
+
 FROM eclipse-temurin:21-jre-jammy
 
 WORKDIR /app
 
 COPY --from=build /app/target/*.jar app.jar
+COPY --from=build-frontend /frontend/dist ./public
 
 EXPOSE 7070
 EXPOSE 5672
