--- a/services/supplier-service/pom.xml
+++ b/services/supplier-service/pom.xml
@@ -35,7 +35,7 @@
                             <finalName>${project.artifactId}</finalName>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>mtogo.supplier.Main</mainClass>
+                                    <mainClass>mtogo.supplier.server.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
