--- a/services/sql-driver/pom.xml
+++ b/services/sql-driver/pom.xml
@@ -123,7 +123,11 @@
             <version>2.4.240</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+        </dependency>
     </dependencies>
 
 
