--- a/services/supplier-service/pom.xml
+++ b/services/supplier-service/pom.xml
@@ -165,6 +165,7 @@
             <version>2.25.2</version>
             <scope>compile</scope>
         </dependency>
+        <!-- QOL -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
