--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -35,6 +35,11 @@ services:
       - sql-driver
     deploy:
       replicas: 1
+    environment:
+      ENV: ${ENV}
+    configs:
+      - source: jwt_public.pem
+        target: /run/configs/jwt_public.pem
     networks:
       - backend
 
@@ -54,6 +59,10 @@ services:
     environment:
       RABBITMQ_USER: ${RABBITMQ_USER}
       RABBITMQ_PASS: ${RABBITMQ_PASS}
+      ENV: ${ENV}
+    configs:
+      - source: jwt_public.pem
+        target: /run/configs/jwt_public.pem
     networks:
       - backend
 
@@ -66,6 +75,11 @@ services:
       - sql-driver
     deploy:
       replicas: 1
+    environment:
+      ENV: ${ENV}
+    configs:
+      - source: jwt_public.pem
+        target: /run/configs/jwt_public.pem
     networks:
       - backend
 
@@ -89,6 +103,10 @@ services:
     environment:
       RABBITMQ_USER: ${RABBITMQ_USER}
       RABBITMQ_PASS: ${RABBITMQ_PASS}
+      ENV: ${ENV}
+    configs:
+      - source: jwt_public.pem
+        target: /run/configs/jwt_public.pem
     networks:
       - backend
 
@@ -101,6 +119,11 @@ services:
       - rabbitmq
     deploy:
       replicas: 1
+    environment:
+      ENV: ${ENV}
+    configs:
+      - source: jwt_public.pem
+        target: /run/configs/jwt_public.pem
     networks:
       - backend
 
@@ -225,6 +248,20 @@ services:
     networks:
       - backend
 
+
+  auth-service:
+    image: ${DOCKER_USER}/auth-service:${AUTH_TAG}
+    environment:
+      ENV: prod
+      RABBITMQ_USER: ${RABBITMQ_USER}
+      RABBITMQ_PASS: ${RABBITMQ_PASS}
+    secrets:
+      - source: auth_private_pkcs8.pem
+        target: auth_private_pkcs8.pem
+    networks:
+      - backend
+
+
 networks:
   backend:
     driver: overlay
@@ -236,3 +273,11 @@ volumes:
   applicant_data:
   caddy_data:
   caddy_config:
+
+secrets:
+  auth_private_pkcs8.pem:
+    external: true
+
+configs:
+  jwt_public.pem:
+    external: true
