--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -251,6 +251,11 @@ services:
 
   auth-service:
     image: ${DOCKER_USER}/auth-service:${AUTH_TAG}
+    ports:
+      - target: 7070
+        published: 7075
+        protocol: tcp
+        mode: host
     environment:
       ENV: prod
       RABBITMQ_USER: ${RABBITMQ_USER}
